[package]
name = "tumblin-down"
version = "0.1.0"
edition = "2021"
authors = ["luna 'villi' borella <ulfrthewolf@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = "0.4"
wgpu = "0.15"
winit = "0.28"
env_logger = "0.10.0"
tobj = { version = "3.2.1", features = ["async"] }
anyhow = "1.0.70"
cfg-if = "1.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", features = ["png", "jpeg"] }
cgmath = "0.18.0"
relative-path = "1.8.0"
kira = { version = "0.7.3", features = ["ogg"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
futures = "0.3.28"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wgpu = { version = "0.15.1", features = ["webgl"] }
wasm-bindgen = "0.2"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "Location", "HtmlCanvasElement"] }
reqwest = "0.11.16"

# To make tobj work
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "1.27.0", features = ["fs"]}
